--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,8 @@
 
     <groupId>qcom.itlegal.ipit</groupId>
     <artifactId>ipit-automation-runtime</artifactId>
-    <version>1.0.8-SNAPSHOT</version>
+    <name>Runtime Microservice</name>
+    <version>1.0.0-SNAPSHOT</version>
 
     <properties>
 
