--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <jacoco.version>0.7.5.201505241946</jacoco.version>
         <mockito.version>1.10.19</mockito.version>
         <junit.version>4.11</junit.version>
+        <commons.lang.version>2.6</commons.lang.version>
 
         <!-- Plugin Versions -->
         <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
@@ -42,7 +43,6 @@
         <exec-maven-plugin.version>1.2.1</exec-maven-plugin.version>
         <maven-surefire-plugin.version>2.14</maven-surefire-plugin.version>
         <maven-scm-plugin.version>1.8.1</maven-scm-plugin.version>
-
 
     </properties>
 
@@ -92,6 +92,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>${commons.lang.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -118,7 +124,7 @@
                                 <argument>${ie.win64.driver.key}</argument>
                                 <argument>${safari.driver.key}</argument>
                             </arguments>
-                            <mainClass>qcom.itlegal.ipit.runtime.DriverManager</mainClass>
+                            <mainClass>com.pwc.runtime.DriverManager</mainClass>
                         </configuration>
                     </execution>
                 </executions>
