Fixed attach-source phase

--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,7 @@
                 <executions>
                     <execution>
                         <id>attach-sources</id>
-                        <phase>verify</phase>
+                        <phase>post-integration-test</phase>
                         <goals>
                             <goal>jar-no-fork</goal>
                         </goals>
