--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <gecko.win64.driver.key>v0.11.1/geckodriver-v0.11.1-win64.zip</gecko.win64.driver.key>
 
         <!-- MS Dependency Versions -->
-        <core-microservice.version>2.0.0-SNAPSHOT</core-microservice.version>
+        <core-microservice.version>2.0.0</core-microservice.version>
 
         <!-- Dependency Versions -->
         <surefire.junit.version>2.18.1</surefire.junit.version>
