--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,10 @@
         <java_code.version>1.8</java_code.version>
 
         <!--Driver KEYS-->
-        <chrome.win.driver.key>2.28/chromedriver_win32.zip</chrome.win.driver.key>
-        <chrome.linux32.driver.key>2.28/chromedriver_linux32.zip</chrome.linux32.driver.key>
-        <chrome.linux64.driver.key>2.28/chromedriver_linux64.zip</chrome.linux64.driver.key>
+        <selenium.server.standalone.driver.key>3.4/selenium-server-standalone-3.4.0.jar</selenium.server.standalone.driver.key>
+        <chrome.win.driver.key>2.29/chromedriver_win32.zip</chrome.win.driver.key>
+        <chrome.linux32.driver.key>2.29/chromedriver_linux32.zip</chrome.linux32.driver.key>
+        <chrome.linux64.driver.key>2.29/chromedriver_linux64.zip</chrome.linux64.driver.key>
         <chrome.mac32.driver.key>2.22/chromedriver_mac32.zip</chrome.mac32.driver.key>
         <ie.win32.driver.key>3.0/IEDriverServer_Win32_3.0.0.zip</ie.win32.driver.key>
         <ie.win64.driver.key>3.0/IEDriverServer_x64_3.0.0.zip</ie.win64.driver.key>
@@ -24,7 +25,7 @@
         <gecko.win64.driver.key>v0.11.1/geckodriver-v0.11.1-win64.zip</gecko.win64.driver.key>
 
         <!-- MS Dependency Versions -->
-        <core-microservice.version>2.0.11</core-microservice.version>
+        <core-microservice.version>2.0.14</core-microservice.version>
 
         <!-- Dependency Versions -->
         <surefire.junit.version>2.18.1</surefire.junit.version>
@@ -161,6 +162,7 @@
                         </goals>
                         <configuration>
                             <arguments>
+                                <argument>${selenium.server.standalone.driver.key}</argument>
                                 <argument>${gecko.win64.driver.key}</argument>
                                 <argument>${chrome.win.driver.key}</argument>
                                 <argument>${chrome.linux32.driver.key}</argument>
