Upgrading to latest core service and latest selenium versions for all drivers.

--- a/src/main/resources/grid/nodeConfig.json
+++ b/src/main/resources/grid/nodeConfig.json
@@ -12,6 +12,12 @@
       "seleniumProtocol": "WebDriver"
     },
     {
+      "browserName": "chrome",
+      "maxInstances": 10,
+      "seleniumProtocol": "WebDriver",
+      "headless": "true"
+    },
+    {
       "browserName": "internet explorer",
       "maxInstances": 1,
       "seleniumProtocol": "WebDriver"
