--- a/src/main/resources/driver.properties
+++ b/src/main/resources/driver.properties
@@ -2,4 +2,4 @@ gecko.driver.url=https://github.com/mozilla/geckodriver/releases/download/
 chrome.driver.url=http://chromedriver.storage.googleapis.com/
 selenium.release.driver.url=http://selenium-release.storage.googleapis.com/
 phantomjs.driver.url=https://bitbucket.org/ariya/phantomjs/downloads/
-#edge.driver.url=http://www.microsoft.com/en-us/download/details.aspx?id=48740
+edge.driver.url=https://download.microsoft.com/download/
