--- a/pom.xml
+++ b/pom.xml
@@ -39,17 +39,19 @@
   </distributionManagement>
   <properties>
     <commons.lang.version>2.6</commons.lang.version>
-    <core-microservice.version>2.0.42</core-microservice.version>
+    <core-microservice.version>2.0.59</core-microservice.version>
     <driver.key.chrome.linux32>2.33/chromedriver_linux32.zip</driver.key.chrome.linux32>
-    <driver.key.chrome.linux64>2.41/chromedriver_linux64.zip</driver.key.chrome.linux64>
-    <driver.key.chrome.mac64>2.41/chromedriver_mac64.zip</driver.key.chrome.mac64>
-    <driver.key.chrome.win>2.41/chromedriver_win32.zip</driver.key.chrome.win>
+    <driver.key.chrome.linux64>2.46/chromedriver_linux64.zip</driver.key.chrome.linux64>
+    <driver.key.chrome.mac64>2.46/chromedriver_mac64.zip</driver.key.chrome.mac64>
+    <driver.key.chrome.win>2.46/chromedriver_win32.zip</driver.key.chrome.win>
     <driver.key.edge.win>F/8/A/F8AF50AB-3C3A-4BC4-8773-DC27B32988DD/MicrosoftWebDriver.exe</driver.key.edge.win>
-    <driver.key.gecko.win64>v0.21.0/geckodriver-v0.21.0-win64.zip</driver.key.gecko.win64>
+    <driver.key.gecko.linux64>v0.24.0/geckodriver-v0.24.0-linux64.tar.gz</driver.key.gecko.linux64>
+    <driver.key.gecko.mac64>v0.24.0/geckodriver-v0.24.0-macos.tar.gz</driver.key.gecko.mac64>
+    <driver.key.gecko.win64>v0.24.0/geckodriver-v0.24.0-win64.zip</driver.key.gecko.win64>
     <driver.key.ie.win32>3.14/IEDriverServer_Win32_3.14.0.zip</driver.key.ie.win32>
     <driver.key.ie.win64>3.14/IEDriverServer_x64_3.14.0.zip</driver.key.ie.win64>
     <driver.key.safari>2.48/SafariDriver.safariextz</driver.key.safari>
-    <driver.key.selenium.server.standalone>3.14/selenium-server-standalone-3.14.0.jar</driver.key.selenium.server.standalone>
+    <driver.key.selenium.server.standalone>3.141/selenium-server-standalone-3.141.0.jar</driver.key.selenium.server.standalone>
     <exec-maven-plugin.version>1.2.1</exec-maven-plugin.version>
     <jacoco.version>0.7.5.201505241946</jacoco.version>
     <java_code.version>1.8</java_code.version>
@@ -213,6 +215,8 @@
               <arguments>
                 <argument>${driver.key.selenium.server.standalone}</argument>
                 <argument>${driver.key.gecko.win64}</argument>
+                <argument>${driver.key.gecko.mac64}</argument>
+                <argument>${driver.key.gecko.linux64}</argument>
                 <argument>${driver.key.chrome.win}</argument>
                 <argument>${driver.key.edge.win}</argument>
                 <argument>${driver.key.chrome.linux32}</argument>
