--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
     <driver.key.safari>2.48/SafariDriver.safariextz</driver.key.safari>
     <driver.key.selenium.server.standalone>3.141/selenium-server-standalone-3.141.0.jar</driver.key.selenium.server.standalone>
     <exec-maven-plugin.version>1.2.1</exec-maven-plugin.version>
+    <format-maven-plugin.version>2.0.1</format-maven-plugin.version>
     <jacoco.version>0.7.5.201505241946</jacoco.version>
     <java_code.version>1.8</java_code.version>
     <junit.version>4.11</junit.version>
@@ -68,7 +69,9 @@
     <maven-scm-provider-gitxexe.version>1.9</maven-scm-provider-gitxexe.version>
     <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
     <maven-surefire-plugin.version>2.14</maven-surefire-plugin.version>
+    <maven.checkstyle.plugin.version>2.17</maven.checkstyle.plugin.version>
     <mockito.version>1.10.19</mockito.version>
+    <skip.plugins>false</skip.plugins>
     <sortpom-maven-plugin.version>2.6.0</sortpom-maven-plugin.version>
     <surefire.junit.version>2.18.1</surefire.junit.version>
     <versions-maven-plugin.version>2.1</versions-maven-plugin.version>
@@ -339,6 +342,57 @@
         <configuration>
           <tag>${project.artifactId}-${project.version}</tag>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>net.revelc.code.formatter</groupId>
+        <artifactId>formatter-maven-plugin</artifactId>
+        <version>${format-maven-plugin.version}</version>
+        <configuration>
+          <skip>${skip.plugins}</skip>
+          <encoding>UTF-8</encoding>
+          <compilerSource>${java.version}</compilerSource>
+          <compilerCompliance>${java.version}</compilerCompliance>
+          <compilerTargetPlatform>${java.version}</compilerTargetPlatform>
+          <configFile>${project.basedir}/eclipse-java-pwc-style.xml</configFile>
+          <excludes>
+            <exclude>**/framework/data/**/*.java</exclude>
+            <exclude>**/enums/**/*.java</exclude>
+            <exclude>**/provider/*.java</exclude>
+          </excludes>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>validate</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>${maven.checkstyle.plugin.version}</version>
+        <configuration>
+          <skip>${skip.plugins}</skip>
+          <configLocation>checkstyle.xml</configLocation>
+          <consoleOutput>true</consoleOutput>
+          <failsOnError>true</failsOnError>
+          <failOnViolation>true</failOnViolation>
+          <violationSeverity>warning</violationSeverity>
+          <includeTestSourceDirectory>true</includeTestSourceDirectory>
+          <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
+          <testSourceDirectory>${basedir}/src/test/java</testSourceDirectory>
+          <outputFile>${basedir}/target/checkstyle/checkstyle-output.xml</outputFile>
+          <cacheFile>${basedir}/target/checkstyle/checkstyle-cachefile</cacheFile>
+          <excludes>**/unit/**/*,**/resources/*</excludes>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
