--- a/pom.xml
+++ b/pom.xml
@@ -41,9 +41,9 @@
     <commons.lang.version>2.6</commons.lang.version>
     <core-microservice.version>2.0.77</core-microservice.version>
     <driver.key.chrome.linux32>2.33/chromedriver_linux32.zip</driver.key.chrome.linux32>
-    <driver.key.chrome.linux64>91.0.4472.19/chromedriver_linux64.zip</driver.key.chrome.linux64>
-    <driver.key.chrome.mac64>91.0.4472.19/chromedriver_mac64.zip</driver.key.chrome.mac64>
-    <driver.key.chrome.win64>91.0.4472.19/chromedriver_win32.zip</driver.key.chrome.win64>
+    <driver.key.chrome.linux64>92.0.4515.107/chromedriver_linux64.zip</driver.key.chrome.linux64>
+    <driver.key.chrome.mac64>92.0.4515.107/chromedriver_mac64.zip</driver.key.chrome.mac64>
+    <driver.key.chrome.win64>92.0.4515.107/chromedriver_win32.zip</driver.key.chrome.win64>
     <driver.key.edge.mac64>92.0.902.55/edgedriver_mac64.zip</driver.key.edge.mac64>
     <driver.key.edge.win64>92.0.902.55/edgedriver_win64.zip</driver.key.edge.win64>
     <driver.key.gecko.linux64>v0.29.1/geckodriver-v0.29.1-linux64.tar.gz</driver.key.gecko.linux64>
