--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.pacificwebconsulting.runtime</groupId>
   <artifactId>runtime-microservice</artifactId>
-  <version>1.0.48-SNAPSHOT</version>
+  <version>1.0.49-SNAPSHOT</version>
   <name>Runtime Microservice</name>
   <description>Runtime web drivers and GRID components microservice</description>
   <url>https://github.com/AnthonyL22/runtime-microservice</url>
@@ -44,15 +44,15 @@
     <driver.key.chrome.linux64>97.0.4692.20/chromedriver_linux64.zip</driver.key.chrome.linux64>
     <driver.key.chrome.mac64>97.0.4692.20/chromedriver_mac64.zip</driver.key.chrome.mac64>
     <driver.key.chrome.win64>97.0.4692.20/chromedriver_win32.zip</driver.key.chrome.win64>
-    <driver.key.edge.mac64>95.0.1020.30/edgedriver_mac64.zip</driver.key.edge.mac64>
-    <driver.key.edge.win64>95.0.1020.30/edgedriver_win64.zip</driver.key.edge.win64>
+    <driver.key.edge.mac64>97.0.1072.55/edgedriver_mac64.zip</driver.key.edge.mac64>
+    <driver.key.edge.win64>97.0.1072.55/edgedriver_win64.zip</driver.key.edge.win64>
     <driver.key.gecko.linux64>v0.30.0/geckodriver-v0.30.0-linux64.tar.gz</driver.key.gecko.linux64>
     <driver.key.gecko.mac64>v0.30.0/geckodriver-v0.30.0-macos.tar.gz</driver.key.gecko.mac64>
     <driver.key.gecko.win64>v0.30.0/geckodriver-v0.30.0-win64.zip</driver.key.gecko.win64>
     <driver.key.ie.win32>3.150/IEDriverServer_Win32_.3.150.2.zip</driver.key.ie.win32>
     <driver.key.ie.win64>3.150/IEDriverServer_x64_.3.150.2.zip</driver.key.ie.win64>
     <driver.key.safari>2.53/SafariDriver.safariextz</driver.key.safari>
-    <driver.key.selenium.server.standalone>3.141/selenium-server-standalone-3.141.0.jar</driver.key.selenium.server.standalone>
+    <driver.key.selenium.server.standalone>4.0/selenium-server-standalone-4.0.0-alpha-2.jar</driver.key.selenium.server.standalone>
     <exec-maven-plugin.version>1.2.1</exec-maven-plugin.version>
     <format-maven-plugin.version>2.0.1</format-maven-plugin.version>
     <jacoco.version>0.7.5.201505241946</jacoco.version>
@@ -224,9 +224,11 @@
               <arguments>
                 <argument>${driver.key.selenium.server.standalone}</argument>
                 <argument>${driver.key.gecko.win64}</argument>
-                <argument>${driver.key.chrome.win64}</argument>
+                <argument>${driver.key.gecko.mac64}</argument>
+                <argument>${driver.key.gecko.linux64}</argument>
                 <argument>${driver.key.edge.mac64}</argument>
                 <argument>${driver.key.edge.win64}</argument>
+                <argument>${driver.key.chrome.win64}</argument>
                 <argument>${driver.key.chrome.linux32}</argument>
                 <argument>${driver.key.chrome.linux64}</argument>
                 <argument>${driver.key.chrome.mac64}</argument>
