--- a/pom.xml
+++ b/pom.xml
@@ -44,15 +44,15 @@
     <driver.key.chrome.linux64>105.0.5195.52/chromedriver_linux64.zip</driver.key.chrome.linux64>
     <driver.key.chrome.mac64>105.0.5195.52/chromedriver_mac64.zip</driver.key.chrome.mac64>
     <driver.key.chrome.win64>105.0.5195.52/chromedriver_win32.zip</driver.key.chrome.win64>
-    <driver.key.edge.mac64>102.0.1245.44/edgedriver_mac64.zip</driver.key.edge.mac64>
-    <driver.key.edge.win64>102.0.1245.44/edgedriver_win64.zip</driver.key.edge.win64>
+    <driver.key.edge.mac64>104.0.1293.70/edgedriver_mac64.zip</driver.key.edge.mac64>
+    <driver.key.edge.win64>104.0.1293.70/edgedriver_win64.zip</driver.key.edge.win64>
     <driver.key.gecko.linux64>v0.31.0/geckodriver-v0.31.0-linux64.tar.gz</driver.key.gecko.linux64>
     <driver.key.gecko.mac64>v0.31.0/geckodriver-v0.31.0-macos.tar.gz</driver.key.gecko.mac64>
     <driver.key.gecko.win64>v0.31.0/geckodriver-v0.31.0-win64.zip</driver.key.gecko.win64>
     <driver.key.ie.win32>3.150/IEDriverServer_Win32_.3.150.2.zip</driver.key.ie.win32>
     <driver.key.ie.win64>3.150/IEDriverServer_x64_.3.150.2.zip</driver.key.ie.win64>
     <driver.key.safari>2.53/SafariDriver.safariextz</driver.key.safari>
-    <driver.key.selenium.server.standalone>4.0/selenium-server-standalone-4.0.0-alpha-2.jar</driver.key.selenium.server.standalone>
+    <driver.key.selenium.server.standalone>4.0/selenium-server-standalone-4.0.0-alpha-2.zip</driver.key.selenium.server.standalone>
     <exec-maven-plugin.version>1.2.1</exec-maven-plugin.version>
     <format-maven-plugin.version>2.0.1</format-maven-plugin.version>
     <jacoco.version>0.7.5.201505241946</jacoco.version>
