Upgrade to latest drivers

--- a/src/main/resources/driver.properties
+++ b/src/main/resources/driver.properties
@@ -1,4 +1,4 @@
-gecko.driver.url=https://github.com/mozilla/geckodriver/releases/download/
+gecko.driver.url=http://github.com/mozilla/geckodriver/releases/download/
 chrome.driver.url=http://chromedriver.storage.googleapis.com/
 selenium.release.driver.url=http://selenium-release.storage.googleapis.com/
 edge.driver.url=https://msedgedriver.azureedge.net/
