--- a/src/main/resources/driver.properties
+++ b/src/main/resources/driver.properties
@@ -1,4 +1,4 @@
 gecko.driver.url=http://github.com/mozilla/geckodriver/releases/download/
-chrome.driver.url=http://chromedriver.storage.googleapis.com/
+chrome.driver.url=https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/
 selenium.release.driver.url=http://selenium-release.storage.googleapis.com/
 edge.driver.url=https://msedgedriver.azureedge.net/
